# Compiladores

./: .replit  AL-CassioCoelho-FelipeRios.py  Algoritmos.txt  PROGRAMA.C  README.md  constantes.py  fonte.alg  main.py  pyproject.toml  readme.txt
